<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Projet QUIZ</string>
    <string name="default_text">texte</string>
    <string name="switch_text">V/F</string>
    <string name="switch_text_true">V</string>
    <string name="switch_text_false">F</string>
    <string name="action_get_quizz">Télécharger les quiz</string>
    <string name="action_reset">Réinitialisation</string>
    <string name="alert_dialog_title_noselect">Pas si vite !</string>
    <string name="alert_dialog_text_quizz">Entrez un titre</string>
    <string name="alert_dialog_title_answer">Nouvelle réponse</string>
    <string name="alert_dialog_title_question">Nouvelle question</string>
    <string name="alert_dialog_title_quizz">Nouveau quiz</string>
    <string name="alert_dialog_hint_quizz">Titre du quiz</string>
    <string name="alert_dialog_hint_question">Entrez une question</string>
    <string name="alert_dialog_hint_answer">Entrez une réponse</string>
    <string name="action_home_start">Commencer à jouer</string>
    <string name="action_home_manage">Gérer vos quiz</string>
    <string name="action_home_settings">Réglages</string>
    <string name="alert_dialog_msg_noselect">Sélectionne au moins une réponse..</string>
    <string name="action_validate">Valider</string>
    <string name="action_next">Suivant</string>
    <string name="action_skip">Passer</string>
    <string name="action_french">Français</string>
    <string name="action_english">Anglais</string>
    <string name="action_show_answers_true">Réponses visibles</string>
    <string name="action_show_answers_false">Réponses cachées</string>
    <string name="score_text">Score :</string>
    <string name="action_back">Retour au menu</string>
    <string name="action_replay">Recommencer</string>
    <string name="highscores">Meilleurs scores</string>
    <string name="all_highscores">Tous les scores</string>
    <string name="switch_highscores_text">Voir tout</string>
    <string name="scorequiz_text">Quiz :</string>
    <string name="action_cancel">Annuler</string>
    <string name="reset_text">Êtes-vous sûr de vouloir réinitialiser vos quiz ?</string>
    <string name="advanced_text">Avancé</string>
    <string name="language_text">Langue</string>
    <string name="play_quizz_text">Choisis un quiz :</string>
    <string name="manage_quizz_text">Édite tes quiz : </string>
    <string name="manage_question_text">Édite les questions de :</string>
    <string name="manage_answer_text">Édite les réponses à :</string>
    <string name="toast_reset">Les données ont été réinitialisées.</string>
    <string name="toast_good">Correct ! Bien joué !</string>
    <string name="toast_bad">Erreur ! Dommage..</string>
    <string name="empty_text">- Vide -</string>
    <string name="http_error_text">Une erreur est survenue pendant le téléchargement..</string>
</resources>
