<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="249dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        app:srcCompat="@drawable/quiz_image" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:background="@drawable/button_custom"
        android:text="@string/action_home_start"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/highscoreBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/button_custom"
        android:text="@string/highscores"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/manageBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/button_custom"
        android:text="@string/action_home_manage"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/button_custom"
        android:text="@string/action_home_settings"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>