<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/scoreQuizzTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:fontFamily="monospace"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:fontFamily="monospace"
        android:text="@string/score_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:fontFamily="monospace"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backToMenuBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="50sp"
        android:background="@drawable/button_custom"
        android:text="@string/action_back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/replayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="50sp"
        android:background="@drawable/button_custom"
        android:text="@string/action_replay"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>