<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/frenchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button_background"
        android:text="@string/action_french"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/englishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button_background"
        android:text="@string/action_english"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button_background"
        android:text="@string/action_reset"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>