<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.HighscoreActivity">

    <Switch
        android:id="@+id/switchHighscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="3sp"
        android:fontFamily="monospace"
        android:text="@string/switch_highscores_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:fontFamily="monospace"
        android:text="@string/highscores"
        android:textAlignment="center"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/scorequiz_text"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerQuizz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60sp"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp" />

</LinearLayout>